@@ -34,6 +34,7 @@ GHVH.longName=Guitar Hero: Van Halen
 RB1.longName=Rock Band
 RB2.longName=Rock Band 2
 TBRB.longName=The Beatles: Rock Band
+GDRB.longName=Green Day: Rock Band
 
 GH1.wikiAbbr=GH1
 GH2.wikiAbbr=GH2
@@ -51,6 +52,7 @@ GHVH.wikiAbbr=GHVH
 RB1.wikiAbbr=RB
 RB2.wikiAbbr=RB2
 TBRB.wikiAbbr=TBRB
+GDRB.wikiAbbr=GDRB
 
 GH1=
 GH2=
@@ -68,3 +70,4 @@ GHVH=
 RB1=
 RB2=
 TBRB=
+GDRB=
